kubernetes/city-producer-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: triplan-city-producer
  namespace: triplan
  labels:
    k8s-app: triplan-city-producer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: triplan-city-producer
        type: application
        service: triplan-city-producer-service
        version: "master"
        owner: "pengyue"
        timestamp: ""
    spec:
      containers:
      - name: triplan
        image: pengyue/triplan-city-producer:latest
        ports:
          - containerPort: 80
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /health-liveness
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health-readiness
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
