kubernetes/city-producer-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: triplan-city-producer
  labels:
    app: triplan-city-producer
spec:
  containers:
  - name: triplan-city-producer
    image: pengyue/triplan-city-producer
    ports:
      - containerPort: 8110
        protocol: TCP
    livenessProbe:
      httpGet:
        path: /health-liveness
        port: 8110
        scheme: HTTP
      initialDelaySeconds: 5
      periodSeconds: 10
      timeoutSeconds: 5
      successThreshold: 1
      failureThreshold: 3
    readinessProbe:
      httpGet:
        path: /health-readiness
        port: 8110
        scheme: HTTP
      initialDelaySeconds: 5
      periodSeconds: 10
      timeoutSeconds: 5
      successThreshold: 1
      failureThreshold: 3
