kubernetes/city-producer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: triplan-city-producer-service
  namespace: triplan
  labels:
    k8s-app: triplan-city-producer-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    k8s-app: triplan-city-producer
  type: ClusterIP
